Ui State not working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">30_Days_Of_Cocktails</string>
+    <string name="app_name">CocktailYes</string>
 
 
         <!-- Cocktail Descriptions -->
